--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet"> 
     <title>GoBarber</title>
   </head>
   <body>
